--- a/Day7/min-project/templates/page.html
+++ b/Day7/min-project/templates/page.html
@@ -23,6 +23,11 @@
     <div class="main">
         __PRODUCTS__CARDS__
     </div>
+    <footer>
+        <label for="message">MESSAGE:</label>
+        <input type="text" id="message">
+        <button type="submit">Submit</button>
+    </footer>
 </body>
 <script>
     const elem = document.getElementsByClassName('product-card');
