--- a/Day7/min-project/templates/card.html
+++ b/Day7/min-project/templates/card.html
@@ -4,6 +4,7 @@
         <h4>__TITLE__</h4>
         <p>__Info__</p>
         <img src="_link_"/>
-        <a href="">Read More..</a>
+        <a href="_more_">Read More..</a>
     </div>
 </body>
+
