--- a/imageGeneratorBackend/imageGenerator/src/pages/common/navBar/navBar.css
+++ b/imageGeneratorBackend/imageGenerator/src/pages/common/navBar/navBar.css
@@ -31,5 +31,10 @@ a:hover{
     height: 24px;
     width: 24px;
     border-radius: 50%;
-    background-color: burlywood;
+}
+
+.islogin-main{
+    gap: 24px;
+    display: flex;
+    flex-direction: row;
 }
