--- a/imageGeneratorBackend/imageGenerator/src/pages/imagegenerator/imageGenerator.css
+++ b/imageGeneratorBackend/imageGenerator/src/pages/imagegenerator/imageGenerator.css
@@ -1,8 +1,3 @@
-/* .image-generator-main-container{
-    color: white;
-    padding: 24px;
-} */
-
 
 * {
     margin: 0;
@@ -21,13 +16,19 @@
 .image-search {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     gap: 16px;
+    height: 65vh;
+    width: 51vw;
+    
 }
 
 .image-search img {
     max-width: 400px;
-    height: auto;
+    height: 46vh;
+    width: 35vw;
+    border: white solid 1px;
 }
 
 .image-search input {
@@ -52,4 +53,11 @@
 
 .image-search button:hover {
     background-color: #218838;
+}
+
+.userinput{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
 }
